
0.1.1 - unreleased
------------------------------------------------------------------------------

FEATURE ENHANCEMENTS:

 + Added new hook ircbot_parsemsg_hook, all incoming msg's are passed to these
   hooks
 + Added bug-info (.bug) command
 + Added --release, --package, --filter features to version-tracker plugin.


BUG FIXES:

 - Added new hook keepalive_process_hook to send regular ping responses to 
   the server.  Keeps bot from being disconnected when no activity is in the
   channel.
 - Resolved GH#1 ircbot fails to reconnect (unhandled socket.error 
   exception).  Also added a lot of error handling in lib/ircbot.py. 